@@ -3,13 +3,31 @@
 
 <h1 align='right'><a name='RELNOTES'>B - Release Notes</a></h1>
 
-<h2>Changes in Mini-XML 2.2.3</h2>
+<h2>Changes in Mini-XML 2.2.4</h2>
 
 <ul>
+
+	<li>The mxml_vsnprintf() function could get in an infinite
+	loop on a buffer overflow (STR #25)</li>
 
 	<li>Added new mxmlNewCDATA() and mxmlSetCDATA() functions
 	to create and set CDATA nodes, which are really just
 	special element nodes.</li>
+
+
+</ul>
+
+
+<h2>Changes in Mini-XML 2.2.3</h2>
+
+<ul>
+
+	<li>Added new MXML_IGNORE type and MXML_IGNORE_CB
+	callback to ignore non-element nodes (i.e.
+	whitespace)</li>
+
+	<li>mxmlLoad*() did not treat custom data as opaque, so
+	whitespace characters would be lost.</li>
 
 </ul>
 
@@ -17,10 +35,6 @@
 <h2>Changes in Mini-XML 2.2.2</h2>
 
 <ul>
-
-	<li>Added new MXML_IGNORE type and MXML_IGNORE_CB
-	callback to ignore non-element nodes (i.e.
-	whitespace)</li>
 
 	<li>mxmlLoad*() did not treat custom data as opaque, so
 	whitespace characters would be lost.</li>
