@@ -1,8 +1,10 @@
-CHANGES - 08/05/2005
+CHANGES - 08/10/2005
 --------------------
 
 CHANGES IN Mini-XML 2.2.4
 
+	- The mxml_vsnprintf() function could get in an infinite
+	  loop on a buffer overflow (STR #25)
 	- Added new mxmlNewCDATA() and mxmlSetCDATA() functions
 	  to create and set CDATA nodes, which are really just
 	  special element nodes.
